# egui_winit_ash

./: Cargo.toml  LICENSE-MIT  readme.md
examples/: image.rs  triangle.rs
examples/shader/: image.frag  image.vert  image_frag.spv  image_vert.spv  triangle.frag  triangle.vert  triangle_frag.spv  triangle_vert.spv
src/: integration.rs  lib.rs  renderer.rs  utils.rs
src/shader/: shader.frag  shader.vert  shader_frag.spv  shader_vert.spv
