[package]
name = "egui_winit_ash"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
egui = { git = "https://github.com/fyouringnai/egui.git" }
egui-winit = { git = "https://github.com/fyouringnai/egui.git" }
winit = "0.30.5"
log = "0.4.22"
bytemuck = "1.18.0"
image = "0.25.2"


[dev-dependencies]
pretty_env_logger = "0.4.0"
ash = { version = "0.38.0", features = ["libloading", "linked"] }
ash-window = "0.13.0"
egui = { git = "https://github.com/fyouringnai/egui.git" }
egui-winit = { git = "https://github.com/fyouringnai/egui.git" }
egui_extras = { git = "https://github.com/fyouringnai/egui.git" , features = ["all_loaders"]}
winit = "0.30.5"
log = "0.4.22"
bytemuck = "1.18.0"
glam = { version = "0.29.0", features = ["bytemuck"] }
image = "0.25.2"




